Changed background color

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,10 @@
 body {
-  background: radial-gradient(
-    circle at 10% 20%,
-    rgb(215, 223, 252) 0%,
-    rgb(255, 255, 255) 0%,
-    rgb(215, 223, 252) 84%
-  );
+  background: linear-gradient(to top, #09203f 0%, #537895 100%);
+  color: #d12f93;
 }
 
 a {
-  color: #3a96dd;
+  color: #fff;
 }
 
 .App .App-footer {
