--- a/src/components/Dictionary.css
+++ b/src/components/Dictionary.css
@@ -1,9 +1,11 @@
 .Dictionary h1 {
+  color: #f886cc;
   font-size: 50px;
+  font-weight: bold;
   text-align: center;
   margin: 30px 0;
 }
 
 .Dictionary section {
-  background-color: rgba(255, 255, 255, 0.842);
+  background: rgba(255, 255, 255, 0.932);
 }
