--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@ a {
   color: #fff;
 }
 
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .App .App-footer {
   font-size: 12px;
   margin-top: 50px;
