--- a/src/components/Dictionary.css
+++ b/src/components/Dictionary.css
@@ -6,6 +6,10 @@
   margin: 30px 0;
 }
 
+.Dictionary h2 {
+  font-size: 26px;
+}
+
 .Dictionary section {
   background: rgba(255, 255, 255, 0.932);
   padding: 30px;
